Fix overlap issues with nav bar

--- a/themes/trc/sass/_page-templates.scss
+++ b/themes/trc/sass/_page-templates.scss
@@ -446,6 +446,8 @@
   .get-involved-sub-menu {
     width: 100%;
     position: fixed;
+    margin-top: 100px;
+    z-index: 10000;
   }
   img {
     margin-left: 2rem;
@@ -464,6 +466,8 @@
     .get-involved-sub-menu {
       width: 100%;
       position: fixed;
+      margin-top: 100px; 
+      z-index: 10000;   
     }
 
     ul {
@@ -708,6 +712,8 @@
     .get-involved-sub-menu {
       width: 100%;
       position: fixed;
+      margin-top: 100px;
+      z-index: 10000;
     }
   }
 
@@ -848,6 +854,8 @@
   .get-involved-sub-menu {
     width: 100%;
     position: fixed;
+    margin-top: 100px;
+    z-index: 10000;
   }
 }
 
@@ -1210,6 +1218,8 @@
   .get-involved-sub-menu {
     position: fixed;
     width: 100%;
+    margin-top: 100px;
+    z-index: 10000;
   }
 }
 
@@ -1261,6 +1271,8 @@
   .get-involved-sub-menu {
     width: 100%;
     position: fixed;
+    margin-top: 100px;
+    z-index: 10000;
   }
 }
 
